@@ -1,3 +1,6 @@
+* Tue Oct 25 2016 Ralph Wright <rwright@onyxpoint.com> - 2.0.2-0
+- Updated and enabled auditd logstash filters
+- Updated spec and acceptance tests
 * Fri Sep 23 2016 Ralph Wright <rwright@onyxpoint.com> - 2.0.1-0
 - Updated filters to make searching and visualization easier.
 - Updated grok syntax.
